feat: init docker setup

--- a/.env
+++ b/.env
@@ -1,5 +1,10 @@
-DB_HOST=localhost
+# DB envs
+
+DB_HOST=db
 DB_NAME=app
 DB_USER=postgres
 DB_PASSWORD=test
 DB_PORT=5432
+
+# APP envs
+APP_PORT = 8000
