--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ dependencies = [
 
 [dependency-groups]
 dev = [
+    "eralchemy[graphviz]>=1.5.0",
     "pre-commit>=4.0.1",
     "pyright>=1.1.389",
     "pytest>=8.3.3",
